Home Page OCmpleted with post components , Profile Page on going

--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -657,3 +657,8 @@ header {
 }
 
 /*************** End Active Header ***************/
+
+.active_link {
+  background: var(--light-blue-color);
+  color: var(--blue-color);
+}
