--- a/frontend/src/pages/home/style.css
+++ b/frontend/src/pages/home/style.css
@@ -10,10 +10,12 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  margin-bottom: 40px;
 }
 
 @media (max-width: 1175px) {
   .createPost,
+  .post,
   .send_verification {
     width: 83%;
   }
@@ -75,6 +77,7 @@
   }
   .stories,
   .createPost,
+  .post,
   .send_verification {
     width: 100%;
   }
@@ -89,6 +92,7 @@
 
 @media (max-width: 965px) {
   .createPost,
+  .post,
   .send_verification {
     width: 93%;
   }
@@ -123,6 +127,7 @@
   }
 
   .createPost,
+  .post,
   .send_verification {
     width: 111%;
   }
@@ -169,6 +174,7 @@
     margin-left: 0;
   }
   .createPost,
+  .post,
   .send_verification {
     width: 100%;
   }
@@ -208,6 +214,12 @@
   }
   .open_post {
     font-size: 14px;
+  }
+  .home_middle {
+    transform: translateX(-66%);
+    width: 80%;
+    margin-left: 20px;
+    margin-right: 30px;
   }
 }
 
