--- a/frontend/src/pages/profile/style.css
+++ b/frontend/src/pages/profile/style.css
@@ -53,6 +53,7 @@
   border-radius: 10px;
   box-shadow: 0 7px 28px 0 var(--shadow-1), 0 2px 4px 0 var(--shadow-2),
     inset 0 0 0 2px var(--shadow-inset);
+  z-index: 999;
 }
 
 .open_cover_menu_item {
@@ -83,6 +84,7 @@
 
 .profile_w_img {
   position: relative;
+  z-index: 99;
 }
 
 .profile_w_bg {
@@ -94,6 +96,7 @@
   border: 2px solid #fff;
   background: #fff;
   cursor: pointer;
+  background-position: center;
 }
 
 .profile_w_bg:hover {
@@ -372,6 +375,102 @@
   object-fit: cover;
   border-radius: 10px;
 }
+.cover {
+  width: 100%;
+  object-fit: cover;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.cover_cropper {
+  height: 100%;
+}
+
+.cover_cropper img {
+  width: 100%;
+}
+
+.cover_cropper .reactEasyCrop_Container {
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+.cover_cropper .reactEasyCrop_CropAreaGrid {
+  border-radius: 0;
+  /* height: 100% !important; */
+}
+
+.save_changes_cover {
+  z-index: 999999999;
+  position: fixed;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 10px 15px;
+  background: rgba(0, 0, 0, 0.7);
+  font-weight: 500;
+  font-size: 14px;
+  color: var(--color-primary);
+}
+
+.save_changes_left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #fff;
+}
+.save_changes_left .public_icon {
+  filter: invert(100%); /* change the color to white*/
+}
+
+.save_changes_right {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.save_changes_right button {
+  padding: 10px;
+}
+
+.save_changes_right button:first-of-type {
+  width: 100px;
+  background: #39393f;
+}
+.save_changes_right button:last-of-type {
+  width: 160px;
+}
+
+.selectCoverBox {
+  width: 570px !important;
+  max-width: 80vw;
+}
+
+.selectCoverBox_links {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 5px 15px;
+}
+
+.selectCoverBox_link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-weight: 500;
+  font-size: 14px;
+  padding: 5px 0 15px 0;
+  cursor: pointer;
+}
+
+.selectCoverBox_link:first-of-type {
+  color: var(--blue-color);
+  border-bottom: 3px solid var(--blue-color);
+}
+
 @media (max-width: 900px) {
   .profile_w_left {
     align-items: center;
