--- a/frontend/src/components/post/style.css
+++ b/frontend/src/components/post/style.css
@@ -514,6 +514,45 @@
   background: #ced0d4;
 }
 
+.post_profile_wrap {
+  position: relative;
+  height: 500px;
+  display: grid;
+  place-items: center;
+  /* background: green; */
+}
+
+.post_profile_wrap .post_updated_bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 300px;
+  width: 100%;
+  background: var(--bg-third);
+}
+
+.post_profile_wrap .post_updated_bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.post_updated_picture {
+  z-index: 1;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 3px solid var(--bg-primary);
+  margin-top: 20%;
+}
+
+.post_cover_wrap {
+  width: 100%;
+  height: 400px;
+}
+.post_cover_wrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /* 
 @media (max-width: 1175px) {
   .post {
