--- a/frontend/src/styles/icons/icons.css
+++ b/frontend/src/styles/icons/icons.css
@@ -759,3 +759,14 @@
   height: 21px;
   width: 21px;
 }
+
+/* adding new icon css like font awesome */
+.public_icon {
+  background-image: url(../../../public/icons/public.png);
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+}
