--- a/frontend/src/components/createPostPopup/style.css
+++ b/frontend/src/components/createPostPopup/style.css
@@ -479,6 +479,62 @@
   }
 }
 
+@media (max-width: 735px) {
+  .rlmove {
+    right: 10px;
+  }
+}
+
+@media (max-width: 550px) {
+  .postBox {
+    width: 85%;
+    margin-left: 2px;
+  }
+
+  .post_input {
+    width: 96%;
+    font-size: 18px;
+  }
+  .post_backgrounds {
+    width: 80%;
+    overflow-x: auto;
+  }
+  .post_backgrounds img {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 405px) {
+  .preview_actions {
+    flex-direction: column;
+    gap: 2px;
+  }
+
+  .mobile_text {
+    width: 50%;
+  }
+}
+
+@media (max-width: 380px) {
+  .post_input {
+    width: 96%;
+    font-size: 16px;
+  }
+
+  .addToYourPost {
+    justify-content: center;
+  }
+  .addto_text {
+    display: none;
+  }
+  .createPost {
+  }
+}
+
+.l0 {
+  left: 0;
+}
 /*
 
 .postBox {
