--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -2,7 +2,7 @@ header {
   position: fixed;
   top: 0;
   height: 56px;
-  z-index: 99;
+  z-index: 999999999999;
   background: var(--bg-primary);
   width: 100%;
   display: grid;
@@ -639,11 +639,15 @@ header {
   }
 
   .mmenu {
-    width: 340px;
+    width: 290px;
   }
   .all_menu {
-    width: 350px;
-    left: -12rem;
+    width: 310px;
+    left: -9.5rem;
+  }
+  .search_area {
+    width: 325px;
+    left: 2px;
   }
 }
 
