--- a/frontend/src/pages/profile/style.css
+++ b/frontend/src/pages/profile/style.css
@@ -119,6 +119,7 @@
 .profile_name {
   display: flex;
   align-items: center;
+  flex-direction: column;
   gap: 10px;
   font-weight: 700;
   font-size: 28px;
@@ -311,6 +312,22 @@
   color: var(--color-secondary);
   font-size: 20px;
 }
+
+.profile_card_count {
+  font-weight: 600;
+}
+
+.profile_friend_imgs {
+  display: flex;
+  align-items: center;
+}
+
+.profile_friend_imgs img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px var(--shadow-1);
+}
 .no_post {
   display: flex;
   align-items: center;
@@ -368,12 +385,19 @@
   height: 100%;
   object-fit: cover;
 }
-
+.profile_photo_card img:hover {
+  filter: brightness(125%);
+}
 .profile_photo_card img {
   width: 100%;
   height: 105px;
   object-fit: cover;
   border-radius: 10px;
+}
+
+.profile_photo_card span {
+  font-size: 11px;
+  color: var(--color-primary);
 }
 .cover {
   width: 100%;
@@ -471,6 +495,13 @@
   border-bottom: 3px solid var(--blue-color);
 }
 
+.profile_right .createPost {
+  width: 100%;
+}
+
+.othername {
+  transform: translateY(-10px);
+}
 @media (max-width: 900px) {
   .profile_w_left {
     align-items: center;
@@ -500,5 +531,100 @@
   .profile_grid {
     grid-template-columns: 1fr;
     width: 95%;
+  }
+
+  .profile_grid .createPost {
+    width: 100% !important;
+  }
+
+  .cover {
+    height: 400px !important;
+  }
+
+  .profile_grid {
+    margin: 0 auto;
+  }
+
+  .bottom_container {
+    padding: 5px;
+
+    margin: 0 auto;
+  }
+
+  .friendship {
+    transform: translateY(-4rem);
+  }
+
+  .profile_card_count {
+    text-align: center;
+    transform: translateY(-5px);
+  }
+
+  .profile_friend_imgs {
+    justify-content: center;
+    transform: translateY(2px);
+  }
+}
+
+@media (max-width: 650px) {
+  .profile_menu_wrap {
+    display: none;
+  }
+  .cover {
+    height: 400px !important;
+  }
+}
+@media (max-width: 510px) {
+  .update_cover_wrapper {
+    bottom: 3rem !important;
+    right: 1rem !important;
+  }
+  .cover img {
+    height: 500px !important;
+  }
+}
+
+@media (max-width: 405px) {
+  .friendship {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.scrollFixed .profile_left {
+  position: fixed;
+  width: 360px;
+  overflow-y: scroll;
+}
+.scrollFixed .profile_left::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollFixed .profile_left::-webkit-scrollbar-thumb {
+  background: #aeafa1;
+  border-radius: 5px;
+}
+
+.scrollFixed .profile_right {
+  margin-left: 370px;
+  width: 504px;
+}
+.showLess .profile_left {
+  bottom: 10px !important;
+}
+.showMore .profile_left {
+  top: 54px !important;
+}
+
+.friendship {
+  z-index: 9;
+  display: flex;
+  gap: 10px;
+}
+
+@media (min-width: 900px) {
+  .friendship {
+    transform: translateX(-2rem);
   }
 }
